# chatcp

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  ideals.md  implementation-notes.md  package.json  tasks.md  wrangler.toml
.agents/rules/: antigravity.md  cli.md  cloudflare.md  common.md  process.md  rust.md
.github/workflows/: ci.yml
cli/: .gitignore  Cargo.toml  README.md
cli/src/: client.rs  config.rs  display.rs  lib.rs  main.rs  models.rs  repl.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  ERROR_HANDLING.md
h-cli/: Cargo.toml  README.md
h-cli/docs/: TUI_GUIDE.md
h-cli/src/: main.rs  session.rs  tui.rs
logs/: chat.csv
logs/diff/: b7351402-6f26-446a-bd16-34664375d60b.diff
migrations/: 0001_initial.sql  0002_auth.sql
src/: auth.rs  db.rs  handlers.rs  integration_tests.rs  lib.rs  models.rs  prelude.rs  router.rs  validation.rs
web/: AGENTS.md  package.json
