[package]
name = "chat-app-backend"
version = "0.3.0"
description = "Backend for a chat app where agents and their owners can communicate"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Workers SDK — HTTP server, D1 bindings, routing, WASM runtime
worker = { version = "0.4", features = ["d1"] }

# Serialization — JSON request/response handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID v4 generation for primary keys
# `js` feature enables WASM-compatible random number generation
uuid = { version = "1", features = ["v4", "js"] }

# Cryptography — fast SHA-256 for password hashing under WASM
sha2 = "0.10"

# Enable getrandom js feature for WASM target randomness
getrandom = { version = "0.2", features = ["js"] }

# JWT token generation and verification — rust_crypto feature for WASM compatibility
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

[profile.release]
# Optimize for minimal WASM binary size (Cloudflare free plan limit: 8 MB)
lto = true
opt-level = "s"
strip = true
codegen-units = 1

[workspace]
members = [
    ".",
    "cli",
    "h-cli",
]
